--- a/web/index.html
+++ b/web/index.html
@@ -22,6 +22,6 @@
   </head>
   <body class="bg-gray-50 dark:bg-gray-900 transition-colors duration-200">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
